export class Barista {
  public prepareCoffee(): string {
    return 'coffee';
  }
}
