export class Cook {
  public prepareDinner(): string {
    return 'dinner';
  }
}
