@startuml

skinparam class {
  backgroundColor lightgoldenrodyellow
  arrowColor darkgoldenrod
  borderColor darkgoldenrod
}

class Waiter <PRE> {
  - cook: Cook
  - barista: Barista
  constructor(cook?: Cook, barista?: Barista)
  + fillOrder(): string
  + fillDoubleOrder(): string
}

class Cook <DEP> {
  + prepareDinner(): string
}

class Barista <DEP> {
  + prepareCoffee(): string
}

Waiter ..> Cook
Waiter ..> Barista

@enduml
